--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -22,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
     "styled-components": "^6.1.19",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
