--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
     "styled-components": "^6.1.19",
     "swiper": "^11.2.10",
