--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "recharts": "^3.1.0",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
