--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "flowbite-react": "^0.11.9",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
